# dumb-pass

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
config/: logging.yaml
src/: crypto.py  db.py  dependencies.py  enums.py  main.py  model_types.py  models.py  permissions.py  security.py  utils.py
src/core/: config.py  logging.py
src/routes/: auth.py  items.py  links.py  vault.py
tests/: auth_utils.py  conftest.py  test_auth.py  test_crypto.py  test_items.py  test_links.py  test_vault.py  utils.py
